# structsender

./: .gitignore  CMakeLists.txt  README.md  bsd  install_local.sh  run_test.sh  structsender.usc
models/: README.md  sender.lua  structsender_package.pkg
src/: decltypes.c  receiver.c  receiver.h  receiver.usc  sender.c  sender.h  sender.usc
template/: receiver.lua  structsender_package.lua
types/: structsender_data.h
